--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Степные места</string>
+    <string name="app_name">Ставротека</string>
     <string name="place_image_desc">Изображение места</string>
 
 </resources>
